<androidx.appcompat.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="?attr/colorSurface"
    android:orientation="vertical"
    android:padding="15dp" >

    <include layout="@layout/layout_about" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:paddingVertical="8dp"
        android:fillViewport="true"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?android:textColorPrimary"
            android:lineSpacingExtra="4dp" />
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/never_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|end"
        android:text="@string/never_show"
        android:gravity="center|end"
        android:checked="false" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="8dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/shizuku_learn"
            style="@style/Widget.Material3.Button.TonalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shizuku_learn"
            android:textAllCaps="false" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Button.TonalButton"
            android:text="@string/start"
            android:textAllCaps="false" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>